# Bangla_Typer

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CHANGES.md  INSTANT_MODE_SPRINT_PLAN.md  LICENSE  MIGRATION_GUIDE.md  NEXT_STEPS.md  README.md  RELEASE.md  SPRINT_PROGRESS.md  WORKFLOW.md  bangla-typer-server.spec  bangla-typer.spec  build.py  cleaned_words.txt  config.json.template  gui.py  package-lock.json  package.json  pyproject.toml  server.py  sidecar.py  update  update_version.py
.github/workflows/: build.yml  release.yml
__tests__/: validation.test.js  wpm-calculator.test.js
app/: database.py  main.py  models.py  paths.py  utils.py
app/routers/: playlists.py  stats.py  system.py  videos.py  youtube.py
app/services/: heartbeat.py  word_processor.py  youtube.py
bangla-typer-pkg/DEBIAN/: control
bangla-typer-pkg/usr/share/applications/: bangla-typer.desktop
scripts/: download_captions.py  process_captions.py  youtube_filter.py  yt_dlp_helper.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
static/: index.html
static/css/: fonts.css  global.css  playlist.css
static/js/: api.js  app.js  instant-mode-config.js  learn.js  main.js  playlist.js  state.js  tauri-bridge.js  typing-engine.js  wpm-calculator.js
static/js/components/: app-header.js  typing-area.js
