[project]
name = "bangla-typer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pyinstaller>=6.19.0",
    "pywebview>=6.1",
    "pyside6>=6.8.2.1",
    "qtpy>=2.4.2",
    "uvicorn>=0.41.0",
    "yt-dlp>=2026.3.3",
    "pyside6-addons>=6.10.2",
]

