[package]
name = "bangla-typer"
version = "1.1.1"
description = "Bangla Typer - Desktop Bangla typing trainer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
portpicker = "0.1.1"
